# money-manager

./: .gitignore  Cargo.toml
src/: main.rs  money_manager.rs
