[package]
name = "money_manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="3.0.0-beta.4"
calamine="0.18.0"
plotly={ git = "https://github.com/igiagkiozis/plotly/", branch = "dev", features = ["kaleido"] }
chrono="0.4.19"
statistical="1.0.0"
rand="0.8.4"
actix-web="4.0.0-beta.8"
serde_json = "1.0.67"
serde = "1.0.130"

[lib]
name="money_manager"
path="src/money_manager.rs"
